Bug 477315 - Dolphin custom servicemenus missing, but show up in preferences.
Summary: Dolphin custom servicemenus missing, but show up in preferences.
Status: RESOLVED FIXED
Alias: None
Product: dolphin
Classification: Applications
Component: general (other bugs)
Version First Reported In: 24.01.75
Platform: Arch Linux Linux
: NOR normal
Target Milestone: ---
Assignee: Dolphin Bug Assignee
URL:
Keywords: qt6, regression
Depends on:
Blocks:
 
Reported: 2023-11-21 06:30 UTC by sarahvca52
Modified: 2023-12-11 07:32 UTC (History)
6 users (show)

See Also:
Latest Commit:
Version Fixed/Implemented In:
Sentry Crash Report:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description sarahvca52 2023-11-21 06:30:03 UTC
SUMMARY
Any servicemenus that aren't the built in ones don't appear to work or show up in dolphin's context menus. They show up in preferences and if you right-click on that servicemenu's .desktop file, but that's it.

In addition, right clicking on a servicemenu's .desktop file and selecting its context menu action crashes Dolphin.

STEPS TO REPRODUCE
1. Open Dolphin with custom servicemenus installed in ~/.local/share/kio/servicemenus
2. Right click in any situation where the right click menu should show a custom servicemenu

OBSERVED RESULT
Servicemenus are absent from right click menu unless rightclicking on the servicemenu file itself
Servicemenus show up in the configure>context menu tab and can be managed from there, but changing any settings there for any non-builtin servicemenus doesn't appear to have any effect.

EXPECTED RESULT
Servicemenus show up in context menus like they do in previous releases of Dolphin.

SOFTWARE/OS VERSIONS
OS: Arch Linux
KDE Plasma: Plasma 6 Alpha (using latest packages available from kde-unstable repo)
KDE Plasma Version: 5.27.80
KDE Frameworks Version: 5.245.0
Qt Version: 6.6.0
Comment 1 edpil02 2023-12-02 15:45:19 UTC
Same issue for me . In addition  dolphin-plugins are  installed but  servicemenus also missing .
KDE Plasma Version: 5.27.80
KDE Frameworks Version: 5.245.0
Dolphin  24.01.75.

I had the same problem with KF5 and dolphin 23.08,  but I found a patch on kdeinvent  (merge request) which resolved the issue.
Unfortunately I can no longer find this patch.  If i  remember,  it was related to a  mime-type  problem.
Comment 2 Nicolas Fella 2023-12-08 22:06:21 UTC
This is a regression from https://invent.kde.org/frameworks/kio/-/commit/0eb24754b5e3fb0025889bca1fca826f45961254
Comment 3 Bug Janitor Service 2023-12-08 22:26:13 UTC
A possibly relevant merge request was started @ https://invent.kde.org/frameworks/kio/-/merge_requests/1505
Comment 4 Nicolas Fella 2023-12-10 16:24:38 UTC
Git commit 2f4677d5fa1bebe096c83216a20c4141c2605fc4 by Nicolas Fella.
Committed on 10/12/2023 at 17:02.
Pushed by nicolasfella into branch 'master'.

Fix loading desktopfile-based service actions

The code before 0eb24754b5e3fb0025889bca1fca826f45961254 would check

if (isBuiltin || !serviceAction.noDisplay())

with the latter part getting lost in the change. This results in olny builtin actions getting picked.
Since the assumption seems to be that actions are never noDisplay we can drop the entire check

M  +21   -23   src/widgets/kfileitemactions.cpp
M  +2    -2    src/widgets/kfileitemactions_p.h

https://invent.kde.org/frameworks/kio/-/commit/2f4677d5fa1bebe096c83216a20c4141c2605fc4
Comment 5 edpil02 2023-12-11 07:32:05 UTC
Thank you so much.
I'm going to try it